@@ -1,3 +1,7 @@
+June 18, 2009 Wei Mingzhi <weimingzhi@gmail.com>
+
+ * plugins/peopsxgl/soft.c: Fixed FVP or x64.
+
 June 16, 2009 Wei Mingzhi <weimingzhi@gmail.com>
 
  * plugins/dfOpenGL: Removed experimental dfOpenGL plugin.
